--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -19,6 +19,21 @@
 <div class="layoutSearch">
 	<!-- Layout para Resultados -->
 	<div class="layoutItem">
+		<div class="LayoutSearch">
+			<div class="Search">
+				<input type="search" class="Search-input" placeholder="Encontrar Empresas o Servicios">
+				<div class="Search-options">
+					<a href="#">
+						<span class="icon-map-pin"></span>
+					</a>
+					<a href="#">
+						<span class="icon-search"></span>
+					</a>
+				</div>
+			</div>
+		</div>
+		<div class="LayoutSearch-space"></div>
+
 		<div class="Item">
 			<div class="Item-picture">
 				<figure class="Item-picture-image"
@@ -64,7 +79,7 @@
 
 			</div>
 		</div>
-		<!--
+
 		<div class="Item">
 			<div class="Item-picture">
 				<figure class="Item-picture-image"
@@ -73,7 +88,7 @@
 			</div>
 			<div class="Item-share">
 				<a href="#">
-					<span class="icon-share2"></span>
+					<span class="icon-share-2"></span>
 				</a>
 			</div>
 			<div class="Item-info">
@@ -99,11 +114,11 @@
 						<i>79413052</i>
 					</a>
 					<a href="#" class="Item-info-contact-gps">
-						<span class="icon-location2"></span>
+						<span class="icon-map-pin"></span>
 						<i>Ver Mapa</i>
 					</a>
 					<a href="#" class="Item-info-contact-more">
-						<span class="icon-arrow-right2"></span>
+						<span class="icon-arrow-right"></span>
 						<i>Ver Mas...</i>
 					</a>
 				</div>
@@ -118,7 +133,7 @@
 			</div>
 			<div class="Item-share">
 				<a href="#">
-					<span class="icon-share2"></span>
+					<span class="icon-share-2"></span>
 				</a>
 			</div>
 			<div class="Item-info">
@@ -144,11 +159,11 @@
 						<i>79413052</i>
 					</a>
 					<a href="#" class="Item-info-contact-gps">
-						<span class="icon-location2"></span>
+						<span class="icon-map-pin"></span>
 						<i>Ver Mapa</i>
 					</a>
 					<a href="#" class="Item-info-contact-more">
-						<span class="icon-arrow-right2"></span>
+						<span class="icon-arrow-right"></span>
 						<i>Ver Mas...</i>
 					</a>
 				</div>
@@ -163,7 +178,7 @@
 			</div>
 			<div class="Item-share">
 				<a href="#">
-					<span class="icon-share2"></span>
+					<span class="icon-share-2"></span>
 				</a>
 			</div>
 			<div class="Item-info">
@@ -189,11 +204,11 @@
 						<i>79413052</i>
 					</a>
 					<a href="#" class="Item-info-contact-gps">
-						<span class="icon-location2"></span>
+						<span class="icon-map-pin"></span>
 						<i>Ver Mapa</i>
 					</a>
 					<a href="#" class="Item-info-contact-more">
-						<span class="icon-arrow-right2"></span>
+						<span class="icon-arrow-right"></span>
 						<i>Ver Mas...</i>
 					</a>
 				</div>
@@ -208,7 +223,7 @@
 			</div>
 			<div class="Item-share">
 				<a href="#">
-					<span class="icon-share2"></span>
+					<span class="icon-share-2"></span>
 				</a>
 			</div>
 			<div class="Item-info">
@@ -234,11 +249,11 @@
 						<i>79413052</i>
 					</a>
 					<a href="#" class="Item-info-contact-gps">
-						<span class="icon-location2"></span>
+						<span class="icon-map-pin"></span>
 						<i>Ver Mapa</i>
 					</a>
 					<a href="#" class="Item-info-contact-more">
-						<span class="icon-arrow-right2"></span>
+						<span class="icon-arrow-right"></span>
 						<i>Ver Mas...</i>
 					</a>
 				</div>
@@ -253,7 +268,7 @@
 			</div>
 			<div class="Item-share">
 				<a href="#">
-					<span class="icon-share2"></span>
+					<span class="icon-share-2"></span>
 				</a>
 			</div>
 			<div class="Item-info">
@@ -279,11 +294,11 @@
 						<i>79413052</i>
 					</a>
 					<a href="#" class="Item-info-contact-gps">
-						<span class="icon-location2"></span>
+						<span class="icon-map-pin"></span>
 						<i>Ver Mapa</i>
 					</a>
 					<a href="#" class="Item-info-contact-more">
-						<span class="icon-arrow-right2"></span>
+						<span class="icon-arrow-right"></span>
 						<i>Ver Mas...</i>
 					</a>
 				</div>
@@ -298,7 +313,7 @@
 			</div>
 			<div class="Item-share">
 				<a href="#">
-					<span class="icon-share2"></span>
+					<span class="icon-share-2"></span>
 				</a>
 			</div>
 			<div class="Item-info">
@@ -324,243 +339,17 @@
 						<i>79413052</i>
 					</a>
 					<a href="#" class="Item-info-contact-gps">
-						<span class="icon-location2"></span>
+						<span class="icon-map-pin"></span>
 						<i>Ver Mapa</i>
 					</a>
 					<a href="#" class="Item-info-contact-more">
-						<span class="icon-arrow-right2"></span>
+						<span class="icon-arrow-right"></span>
 						<i>Ver Mas...</i>
 					</a>
 				</div>
 
 			</div>
 		</div>
-		<div class="Item">
-			<div class="Item-picture">
-				<figure class="Item-picture-image"
-				style="background-image:url(../../assets/images/profile.png)"
-				></figure>
-			</div>
-			<div class="Item-share">
-				<a href="#">
-					<span class="icon-share2"></span>
-				</a>
-			</div>
-			<div class="Item-info">
-				<a href="#linkpendejo" class="Item-info-link"></a>
-				<h2 class="Item-info-name">
-					Pollos Kikys
-				</h2>
-				<h5 class="Item-info-category">
-					Restaurant - Santa Cruz
-				</h5>
-				<p class="Item-info-description">
-					Pollos a la leña siempre con doble arroz,
-					Deliciosos y Sensuales llopos a la leña siempre con doble arroz!
-				</p>
-				<adress class="Item-info-address">
-					<strong>Direccion:</strong>
-					Calle Pinilla Nro.2588, Edif Arcadia P.11 E(Socopachi)
-				</adress>
-
-				<div class="Item-info-contact">
-					<a href="tel:79413052" class="Item-info-contact-cellphone">
-						<span class="icon-phone"></span>
-						<i>79413052</i>
-					</a>
-					<a href="#" class="Item-info-contact-gps">
-						<span class="icon-location2"></span>
-						<i>Ver Mapa</i>
-					</a>
-					<a href="#" class="Item-info-contact-more">
-						<span class="icon-arrow-right2"></span>
-						<i>Ver Mas...</i>
-					</a>
-				</div>
-
-			</div>
-		</div>
-		<div class="Item">
-			<div class="Item-picture">
-				<figure class="Item-picture-image"
-				style="background-image:url(../../assets/images/profile.png)"
-				></figure>
-			</div>
-			<div class="Item-share">
-				<a href="#">
-					<span class="icon-share2"></span>
-				</a>
-			</div>
-			<div class="Item-info">
-				<a href="#linkpendejo" class="Item-info-link"></a>
-				<h2 class="Item-info-name">
-					Pollos Kikys
-				</h2>
-				<h5 class="Item-info-category">
-					Restaurant - Santa Cruz
-				</h5>
-				<p class="Item-info-description">
-					Pollos a la leña siempre con doble arroz,
-					Deliciosos y Sensuales llopos a la leña siempre con doble arroz!
-				</p>
-				<adress class="Item-info-address">
-					<strong>Direccion:</strong>
-					Calle Pinilla Nro.2588, Edif Arcadia P.11 E(Socopachi)
-				</adress>
-
-				<div class="Item-info-contact">
-					<a href="tel:79413052" class="Item-info-contact-cellphone">
-						<span class="icon-phone"></span>
-						<i>79413052</i>
-					</a>
-					<a href="#" class="Item-info-contact-gps">
-						<span class="icon-location2"></span>
-						<i>Ver Mapa</i>
-					</a>
-					<a href="#" class="Item-info-contact-more">
-						<span class="icon-arrow-right2"></span>
-						<i>Ver Mas...</i>
-					</a>
-				</div>
-
-			</div>
-		</div>
-		<div class="Item">
-			<div class="Item-picture">
-				<figure class="Item-picture-image"
-				style="background-image:url(../../assets/images/profile.png)"
-				></figure>
-			</div>
-			<div class="Item-share">
-				<a href="#">
-					<span class="icon-share2"></span>
-				</a>
-			</div>
-			<div class="Item-info">
-				<a href="#linkpendejo" class="Item-info-link"></a>
-				<h2 class="Item-info-name">
-					Pollos Kikys
-				</h2>
-				<h5 class="Item-info-category">
-					Restaurant - Santa Cruz
-				</h5>
-				<p class="Item-info-description">
-					Pollos a la leña siempre con doble arroz,
-					Deliciosos y Sensuales llopos a la leña siempre con doble arroz!
-				</p>
-				<adress class="Item-info-address">
-					<strong>Direccion:</strong>
-					Calle Pinilla Nro.2588, Edif Arcadia P.11 E(Socopachi)
-				</adress>
-
-				<div class="Item-info-contact">
-					<a href="tel:79413052" class="Item-info-contact-cellphone">
-						<span class="icon-phone"></span>
-						<i>79413052</i>
-					</a>
-					<a href="#" class="Item-info-contact-gps">
-						<span class="icon-location2"></span>
-						<i>Ver Mapa</i>
-					</a>
-					<a href="#" class="Item-info-contact-more">
-						<span class="icon-arrow-right2"></span>
-						<i>Ver Mas...</i>
-					</a>
-				</div>
-
-			</div>
-		</div>
-		<div class="Item">
-			<div class="Item-picture">
-				<figure class="Item-picture-image"
-				style="background-image:url(../../assets/images/profile.png)"
-				></figure>
-			</div>
-			<div class="Item-share">
-				<a href="#">
-					<span class="icon-share2"></span>
-				</a>
-			</div>
-			<div class="Item-info">
-				<a href="#linkpendejo" class="Item-info-link"></a>
-				<h2 class="Item-info-name">
-					Pollos Kikys
-				</h2>
-				<h5 class="Item-info-category">
-					Restaurant - Santa Cruz
-				</h5>
-				<p class="Item-info-description">
-					Pollos a la leña siempre con doble arroz,
-					Deliciosos y Sensuales llopos a la leña siempre con doble arroz!
-				</p>
-				<adress class="Item-info-address">
-					<strong>Direccion:</strong>
-					Calle Pinilla Nro.2588, Edif Arcadia P.11 E(Socopachi)
-				</adress>
-
-				<div class="Item-info-contact">
-					<a href="tel:79413052" class="Item-info-contact-cellphone">
-						<span class="icon-phone"></span>
-						<i>79413052</i>
-					</a>
-					<a href="#" class="Item-info-contact-gps">
-						<span class="icon-location2"></span>
-						<i>Ver Mapa</i>
-					</a>
-					<a href="#" class="Item-info-contact-more">
-						<span class="icon-arrow-right2"></span>
-						<i>Ver Mas...</i>
-					</a>
-				</div>
-
-			</div>
-		</div>
-		<div class="Item">
-			<div class="Item-picture">
-				<figure class="Item-picture-image"
-				style="background-image:url(../../assets/images/profile.png)"
-				></figure>
-			</div>
-			<div class="Item-share">
-				<a href="#">
-					<span class="icon-share2"></span>
-				</a>
-			</div>
-			<div class="Item-info">
-				<a href="#linkpendejo" class="Item-info-link"></a>
-				<h2 class="Item-info-name">
-					Pollos Kikys
-				</h2>
-				<h5 class="Item-info-category">
-					Restaurant - Santa Cruz
-				</h5>
-				<p class="Item-info-description">
-					Pollos a la leña siempre con doble arroz,
-					Deliciosos y Sensuales llopos a la leña siempre con doble arroz!
-				</p>
-				<adress class="Item-info-address">
-					<strong>Direccion:</strong>
-					Calle Pinilla Nro.2588, Edif Arcadia P.11 E(Socopachi)
-				</adress>
-
-				<div class="Item-info-contact">
-					<a href="tel:79413052" class="Item-info-contact-cellphone">
-						<span class="icon-phone"></span>
-						<i>79413052</i>
-					</a>
-					<a href="#" class="Item-info-contact-gps">
-						<span class="icon-location2"></span>
-						<i>Ver Mapa</i>
-					</a>
-					<a href="#" class="Item-info-contact-more">
-						<span class="icon-arrow-right2"></span>
-						<i>Ver Mas...</i>
-					</a>
-				</div>
-
-			</div>
-		</div>
-	-->
 	</div>
 	<!-- Layout de filtros -->
 	<div class="layoutFilter">
