--- a/assets/css/icomoon.css
+++ b/assets/css/icomoon.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/fonts-icomoon/icomoon.eot?7sh9vk');
-  src:  url('../fonts/fonts-icomoon/icomoon.eot?7sh9vk#iefix') format('embedded-opentype'),
-    url('../fonts/fonts-icomoon/icomoon.ttf?7sh9vk') format('truetype'),
-    url('../fonts/fonts-icomoon/icomoon.woff?7sh9vk') format('woff'),
-    url('../fonts/fonts-icomoon/icomoon.svg?7sh9vk#icomoon') format('svg');
+  src:  url('../fonts/fonts-icomoon/icomoon.eot?4yazxi');
+  src:  url('../fonts/fonts-icomoon/icomoon.eot?4yazxi#iefix') format('embedded-opentype'),
+    url('../fonts/fonts-icomoon/icomoon.ttf?4yazxi') format('truetype'),
+    url('../fonts/fonts-icomoon/icomoon.woff?4yazxi') format('woff'),
+    url('../fonts/fonts-icomoon/icomoon.svg?4yazxi#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,15 +24,24 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-arrow-right:before {
+  content: "\e900";
+}
+.icon-check:before {
+  content: "\e905";
+}
+.icon-map-pin:before {
+  content: "\e901";
+}
 .icon-phone:before {
   content: "\e902";
 }
-.icon-location2:before {
-  content: "\e";
+.icon-search:before {
+  content: "\e903";
 }
-.icon-arrow-right2:before {
-  content: "\ea3c";
+.icon-send:before {
+  content: "\e906";
 }
-.icon-share2:before {
-  content: "\ea82";
+.icon-share-2:before {
+  content: "\e904";
 }
