--- a/templates/event/event.css
+++ b/templates/event/event.css
@@ -1,592 +1,216 @@
 body {
-    background: #e9eaef;
-}
-
-a,
-a:hover {
-    text-decoration: none;
-    color: #8e8e92;
-}
-
-.prueba24 {
-    display: none;
+  background: #e9eaef;
 }
 
 .reset-padding {
-    padding: 0;
+  padding: 0;
 }
 
 .reset-margin {
-    margin: 0;
+  margin: 0;
 }
 
-.reset-both {
-    height: 200px;
-    margin-top: 20px;
+.container-event {
+  position: relative;
+  height: auto;
+  margin: 0 auto;
 }
 
-.portada {
-    background-image: url(../../assets/images/portada.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 200px;
-    width: 100%;
-    padding-top: 30px;
+.container-item-event {
+  background: #041a41;
+  height: 600px;
+  display: inline-block;
+  width: 100%;
+  padding: 15px;
 }
 
-.container1 {
-    width: 100%;
-    height: auto;
-    margin-top: 5px;
-    background: transparent;
+.item-event {
+  width: 100%;
+  height: 200px;
+  background: white;
+  background-image: url(../../assets/images/event-picture.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 3px;
+  margin: 0 auto;
+  margin-bottom: 15px;
+  position: relative;
+  box-shadow: 1px 1px 5px #474747;
 }
 
-.logo {
+.item-name {
+  display: block;
+  font-size: 17px;
+  color: white;
+  float: right;
+  /* margin-left: 300px; */
+  margin-top: 80px;
+  width: 64%;
+}
+
+.item-picture {
+  width: 100%;
+  height: 110px;
+  background: #ccc;
+  background-image: url(../../assets/images/event-picture.jpg);
+  background-position: center top;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 5px 5px 0px 0px;
+}
+
+.item-gradiente {
+  width: 100%;
+  height: 110px;
+  position: absolute;
+  top: 0;
+  background-image: -webkit-linear-gradient(bottom, black, transparent);
+  background-image: -moz-linear-gradient(bottom, black, transparent);
+  background-image: -ms-linear-gradient(bottom, black, transparent);
+}
+
+.item-info {
+  width: 100%;
+  height: 90px;
+  background: #fff;
+  border-radius: 0px 0px 5px 5px;
+}
+
+.item-date {
+  width: 85px;
+  height: 85px;
+  background: #f8f8f8;
+  border-radius: 50%;
+  position: absolute;
+  top: 68px;
+  text-align: center;
+  box-shadow: 1px 1px 5px #5e575791;
+  left: 13px;
+}
+
+.item-date-month {
+  display: block;
+  margin-top: -13px;
+  font-size: 21px;
+  color: #3c8bf1;
+}
+
+.item-date-day {
+  display: block;
+  font-size: 35px;
+  line-height: 1.4;
+  color: #3163aa;
+  font-weight: bold;
+  margin-top: -3px;
+}
+
+.item-date-year {
+  display: block;
+  margin-top: -7px;
+  font-size: 17px;
+  color: #8bb7fb;
+}
+
+.item-description {
+  height: 45px;
+  width: 65%;
+  float: right;
+  height: auto;
+  /* background: red; */
+  padding: 4px 7px;
+  text-align: justify;
+}
+
+.item-genial {
+  clear: both;
+}
+
+.font-genial {
+  font-size: 45px;
+}
+
+.filtro {
+  display: none;
+}
+
+@media (min-width:420px) {
+  .item-name {
+    width: 70%;
+  }
+  .item-description {
+    width: 70%;
+    float: right;
+    padding: 4px 4px;
+    padding-right: 20px;
+  }
+}
+
+@media (min-width:500px) {
+  .item-date {
     width: 100px;
     height: 100px;
-    border-radius: 50%;
+    top: 57px;
+    left: 25px;
+  }
+  .font-genial {
+    font-size: 55px;
+  }
 }
 
-.logo1,
-.info-business {
-    display: none;
-}
-
-.gradient {
-    height: 60px;
-    background-image: -webkit-linear-gradient(bottom, black, transparent);
-    background-image: -moz-linear-gradient(bottom, black, transparent);
-    background-image: -ms-linear-gradient(bottom, black, transparent);
-}
-
-.font-center {
-    text-align: center;
-}
-
-.font-block {
+@media (min-width:650px) {
+  .item-event {
+    height: 240px;
+  }
+  .item-name {
+    font-size: 21px;
+  }
+  .item-date-day {
+    font-size: 54px;
+  }
+  .item-date-month {
     display: block;
+    margin-top: -17px;
+  }
+  .item-date {
+    width: 120px;
+    height: 120px;
+    top: 68px;
+  }
+  .item-gradiente, .item-picture {
+    height: 130px;
+  }
+  .font-genial {
+    font-size: 60px;
+  }
+  .item-info{
+    height: 110px;
+  }
 }
 
-.font-title {
-    font-size: 20px;
-}
-
-.font-title1 {
-    font-size: 40px;
-}
-
-.font-title2 {
-    font-size: 35px;
-}
-
-.font-small {
-    font-size: 17px;
-}
-
-.font-share {
-    display: block;
-    float: right;
-    margin-right: 10%;
-    font-size: 22px;
-    margin-top: 2px;
-}
-.font-genial{
-    font-size: 52px;
-}
-
-.icon-share {
-    margin-left: 10%;
-    font-size: 35px;
-}
-
-.color-white {
-    color: white;
-}
-
-.color-gray {
-    color: #8e8e92;
-}
-
-.color-gray1 {
-    color: #2a2a2a;
-}
-
-.color-orange {
-    color: #f19733;
-}
-.color-whiteO {
-    color: #ffffff94;
-}
-
-
-.color-lightOrange {
-    color: #f8c864;
-}
-
-.color-fucsia {
-    color: #db519d;
-}
-
-.color-turqueza {
-    color: #59bbbf;
-}
-
-.bg-gray {
-    background: #e9eaef;
-}
-
-.bg-gray1 {
-    background: #f6f6f8;
-}
-
-.bg-white {
-    background: white;
-}
-
-.contenedor {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    height: auto;
-}
-
-.menu-profile {
-    margin: 0;
-    height: 100px;
-    background: #f6f6f8;
-}
-
-.prueba {
-    background: url(../../assets/images/sprite-logoo-light.png);
-    width: 70px;
-    height: 70px;
-    background-size: auto 70px;
-    background-position: 0px;
-    margin: 0 auto;
-    margin-top: 3px;
-}
-
-.container-menu {
+@media (min-width:960px) {
+  .container-event {
+    padding: 20px;
+    width: 960px;
+  }
+  .container-item-event {
+    width: 600px;
+  }
+  .filtro {
     display: inline-block;
-    width: 22%;
-    text-align: center;
-}
-
-.container-xmidle {
-    width: 100%;
-    height: auto;
-}
-
-.container-small {
-    width: 100%;
-    padding-top: 3px;
-    padding-bottom: 3px;
-    border-bottom: 0.4px solid #92939c87;
-}
-
-.container-midle {
-    width: 100%;
-    height: 75px;
-    border-top: 1px solid #ccc;
-}
-
-.container4 {
-    /*background: red;*/
-    width: 60%;
-    margin: 0 auto;
-}
-
-.contact-info {
-    width: 68%;
-    float: left;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    margin-right: 10px;
-}
-
-.facebook {
-    background: #424242;
-    margin-right: 5px;
-    margin-left: 5px;
-    width: 40px;
-    height: 40px;
-    text-align: center;
-    padding-top: 2px;
-    border-radius: 50%;
-    color: white;
-}
-
-.facebook:hover {
-    background: white;
-    color: #475993;
-    box-shadow: 2px 2px 9px #ccc;
-    /*border:1px solid #475993;*/
-}
-
-.twitter {
-    background: #424242;
-    width: 40px;
-    height: 40px;
-    text-align: center;
-    color: white;
-    border-radius: 50%;
-    margin-left: 5px;
-    margin-right: 5px;
-    padding-left: 2px;
-    padding-top: 3px;
-}
-
-.twitter:hover {
-    color: #54acee;
-    background: white;
-    box-shadow: 2px 2px 9px #ccc;
-}
-
-.google-plus {
-    background: #424242;
-    height: 40px;
-    width: 40px;
-    text-align: center;
-    color: white;
-    border-radius: 50%;
-    padding-top: 2px;
-    margin-left: 5px;
-    margin-right: 5px;
-}
-
-.google-plus:hover {
-    color: #dc4e41;
-    background: white;
-    box-shadow: 2px 2px 9px #ccc;
-}
-
-.youtube {
-    width: 40px;
-    height: 40px;
-    text-align: center;
-    background: #424242;
-    margin-left: 5px;
-    margin-right: 5px;
-    color: white;
-    padding-top: 2px;
-    padding-left: 3px;
-    border-radius: 50%;
-}
-
-.youtube:hover {
-    color: #ea3f33;
-    background: white;
-    box-shadow: 2px 2px 9px #ccc;
-}
-
-.prueba3 {
-    background: #e9eaef;
-    height: 60px;
-    padding-top: 15px;
-}
-
-.ubication {
-    background: url('../../assets/images/img-gps.png');
-    background-repeat: no-repeat;
-    background-size: cover;
+    width: 300px;
     height: 200px;
-}
-
-.picture-container {
-    background: yellow;
-    height: 145px;
-    margin-bottom: 15px;
-}
-
-.padding {
-    padding: 10px 50px;
-}
-
-.container-extra {
-    width: 35%;
-    float: left;
-    height: 40px;
-    text-align: right;
-    font-size: 25px;
-}
-
-.btn-left span {
-    font-size: 70px;
-    float: right;
-    margin-top: 40px;
-    margin-right: 10px;
-}
-
-.btn-right span {
-    margin-left: 10px;
-    font-size: 70px;
-    margin-top: 40px;
-}
-
-.btn-right,
-.btn-left {
-    width: 20%;
-    height: 100%;
-    color: #444444;
-}
-
-
-@media(min-width: 460px) {
-    .font-share {
-        margin-right: 20%;
-    }
-    .icon-share {
-        margin-left: 20%;
-    }
-}
-
-.borde {
-    border-bottom: 1px solid #ccc
-}
-
-@media(min-width: 600px) {
-    .font-share {
-        margin-right: 30%;
-    }
-    .icon-share {
-        margin-left: 30%;
-    }
-}
-
-@media (min-width: 765px) {
-    .logo {
-        width: 155px;
-        height: 155px;
-    }
-    .portada {
-        height: 280px;
-    }
-    .gradient {
-        height: 85px;
-        padding-top: 25px;
-    }
-    .prueba {
-        float: left;
-    }
-    .container-menu {
-        margin-top: 10px;
-    }
-    .options {
-        float: left;
-    }
-    .options span {
-        display: block;
-        margin-top: 20px;
-        margin-left: 10px;
-    }
-    .font-small {
-        font-size: 22px;
-    }
-    .container-small {
-        width: 35%;
-        float: right;
-        padding: 15px 17px;
-        border: 0;
-    }
-    .container-xmidle {
-        float: left;
-        width: 65%;
-        border: 0;
-    }
-    .container-midle {
-        width: 50%;
-        float: left;
-        border: 0px;
-    }
-    .container1 {
-        clear: both;
-    }
-    .facebook,
-    .twitter,
-    .google-plus,
-    .youtube {
-        width: 60px;
-        height: 60px;
-        font-size: 40px;
-        padding-top: 10px;
-    }
-    .container4 {
-        width: 80%;
-        margin: 29px;
-        height: 50px;
-        padding-top: 10px;
-        border-left: 1px solid #ccc;
-    }
-    .icon-share {
-        margin-left: 10%;
-    }
-    .font-share {
-        margin-right: 10%;
-    }
-    .picture-container {
-        height: 250px;
-    }
-    .btn-left span {
-        font-size: 90px;
-        float: right;
-        margin-top: 73px;
-        margin-right: 25px;
-    }
-    .btn-right span {
-        margin-left: 25px;
-        font-size: 90px;
-        margin-top: 73px;
-    }
-}
-
-@media (min-width: 992px) {
-    .font-genial{
-    font-size: 46px;
-}
-    .menu-profile {
-        display: none;
-    }
-    .gradient {
-        display: none;
-    }
-    .portada {
-        height: 320px;
-    }
-    .logo {
-        display: none;
-    }
-    .logo1 {
-        display: block;
-        height: auto;
-        position: absolute;
-        top: -40px;
-        left: 50px;
-    }
-    .logo1 img {
-        width: 230px;
-        height: 230px;
-    }
-    .info-business {
-        display: block;
-        width: 55%;
-        height: 100px;
-        background-image: -webkit-linear-gradient(top, black, transparent);
-        background-image: -moz-linear-gradient(top, black, transparent);
-        background-image: -ms-linear-gradient(top, black, transparent);
-        text-align: center;
-        float: right;
-        padding-top: 50px;
-        height: 188px;
-    }
-    .reset-both {
-        margin: 0;
-        padding: 0;
-    }
-    .container-principal {
-        margin-left: 70px;
-        margin-top: 120px;
-        margin-bottom: 120px;
-        float: left;
-    }
-    .container-small {
-        width: 45%;
-        float: right;
-        border: 0;
-    }
-    .container-xmidle {
-        float: left;
-        width: 55%;
-        border: 0;
-    }
-    .container4 {
-        margin: 25px;
-    }
-    .facebook,
-    .twitter,
-    .google-plus,
-    .youtube {
-        width: 55px;
-        height: 55px;
-        font-size: 40px;
-        padding: 10px;
-    }
-    .youtube {
-        padding-left: 15px;
-    }
-    .prueba24 {
-        display: block;
-        background: white;
-        height: auto;
-        position: absolute;
-        float: left;
-        right: 65px;
-        top: 39px;
-        position: fixed;
-        border-radius: 5px;
-        padding: 0;
-    }
-    .prueba34 {
-        height: 80px;
-        background: #292929;
-        width: 100%;
-        border-radius: 5px 5px 0px 0px;
-        margin: 0;
-        padding: 10px;
-    }
-    .font-title {
-        font-size: 16px;
-    }
-    .font-midle {
-        font-size: 25px;
-    }
-    .container-small2 {
-        width: 48%;
-        height: 60px;
-        display: inline-block;
-    }
-    .ubication {
-        height: 300px;
-    }
-    .menu-options {
-        height: 35px;
-        margin-top: 30px;
-        border-radius: 25px;
-        text-align: center;
-        padding: 5px 0px;
-    }
-    .logo-options {
-        width: 60px;
-        height: 60px;
-        border-radius: 50%;
-        background: blue;
-        float: right;
-        margin-top: -16px;
-    }
-}
-
-@media (min-width:1061px) {
-    .info-business {
-        width: 75%;
-        padding-left: 10px;
-    }
-}
-
-@media (min-width: 1300px) {
-    .font-title {
-        font-size: 18px;
-    }
-    .icon-share {
-        margin-left: 15%;
-    }
-    .font-share {
-        margin-right: 15%;
-    }
-    .prueba34 {
-        height: 87px;
-    }
-    .container-small2 {
-        height: 80px;
-    }
-    .prueba24 {
-        top: 20px;
-    }
+    background: white;
+    margin-left: 20px;
+    border-radius: 7px;
+    color: #707175;
+    position: fixed;
+  }
+  .reset-margin1 {
+    position: relative;
+    padding: 0;
+    margin: 0 auto;
+    width: 960px;
+    float: none;
+  }
 }
