--- a/templates/event/event.html
+++ b/templates/event/event.html
@@ -2,206 +2,66 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../../assets/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="../../assets/css/fonts.css">
-    <link rel="stylesheet" type="text/css" href="../../assets/css/ionicons.min.css">
-    <link rel="stylesheet" type="text/css" href="../../assets/css/genial.css">
-    <!-- style for this template -->
-    <link rel="stylesheet" type="text/css" href="./event.css">
-    <!-- style for components -->
-    <title>Event</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="../../assets/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="../../assets/css/fonts.css">
+  <link rel="stylesheet" type="text/css" href="../../assets/css/ionicons.min.css">
+  <link rel="stylesheet" type="text/css" href="../../assets/css/genial.css">
+  <!-- style for this template -->
+  <link rel="stylesheet" type="text/css" href="./event.css">
+  <!-- style for components -->
+  <title>Event</title>
 </head>
 
 <body>
-    <div class="row reset-margin reset-padding">
-        <div class="col-xs-12 col-md-6 col-md-offset-3 container-principal reset-margin reset-padding">
-            <div class="logo1">
-                <img src=" ../../assets/images/logotodopique.jpg" alt="">
-            </div>
-            <div class="info-business">
-                <span class="font-title font-block color-white">A TODO PIQUE CHUQUISACA</span>
-                <span class="color-white">imagen</span>
-                <span class="color-white">RESTAURANTE</span>
-            </div>
-            <div class="portada">
-                <div class="information-business">
-                    <div class="container1 font-center" style="height: auto;">
-                        <img class="logo" src="../../assets/images/logotodopique.jpg" alt="">
-                    </div>
-                    <div class="container1 gradient font-center">
-                        <span class="font-title font-block color-white">A TODO PIQUE CHUQUISACA</span>
-                        <span class="color-white">imagen</span>
-                        <span class="color-white">RESTAURANTE</span>
-                    </div>
+  <div class="row reset-margin">
+    <div class="col-md-12 reset-padding">
+      <div class="row reset-margin">
+        <div class="col-md-10 col-md-offset-1 reset-padding reset-margin1">
+          <div class="container-event">
+            <div class="container-item-event">
+              <div class="item-event">
+                <div class="item-picture"></div>
+                <div class="item-gradiente">
+                  <span class="item-name">Holy Party Sucre Bolivia</span>
                 </div>
-            </div>
-            <div class="container1 menu-profile" style="text-align: center;">
-                <div class="container-menu">
-                    <div class="prueba"></div>
-                    <div class="options">
-                        <span class="font-small color-gray">Inicio</span>
-                    </div>
-                </div>
-                <div class="container-menu">
-                    <div class="prueba" style="background-position: 210px;"></div>
-                    <div class="options">
-                        <span class="font-small color-gray">Ofertas</span>
-                    </div>
-                </div>
-                <div class="container-menu">
-                    <div class="prueba" style="background-position: 140px;"></div>
-                    <div class="options">
-                        <span class="font-small color-gray">Eventos</span>
-                    </div>
-                </div>
-                <div class="container-menu">
-                    <div class="prueba" style="background-position: 350px;"></div>
-                    <div class="options">
-                        <span class="font-small color-gray">Empleos</span>
-                    </div>
-                </div>
-            </div>
-            <div class="container1 reset-both">
-                <div>
-                    <div class="container-small bg-white">
-                        <div class="genial genial-preview font-genial" data-genial='{"press":"0","number_like":"101"}' style="margin:0 auto;">
-                            <div class="genial-left">
-                                <svg version="1" xmlns="http://www.w3.org/2000/svg" width="232" height="50" viewBox="0 0 232 50">
-                                    <path d="M44 45.6a52.2 52.2 0 0 1-15.6 2.6c-8.5 0-14.7-2.1-19-6.3-4.2-4-6.6-10-6.5-17C2.9 9.6 14.2.7 29.5.7a32 32 0 0 1 13 2.3l-2.3 8.4c-2.5-1-5.7-2-10.8-2-8.8 0-15.5 5-15.5 15.1 0 9.6 6 15.3 14.7 15.3 2.4 0 4.3-.3 5.2-.7v-9.8h-7.2V21h17.3v24.6zM79.9 28H62.8v11h19.1v8.7H52.2V1.1h28.7v8.6H62.8v9.7h17.1V28zM89.1 47.7V1.1h12.3l9.7 17a135 135 0 0 1 7.6 16h.2c-.7-6.1-.9-12.4-.9-19.4V1.1h9.7v46.6h-11l-10-18c-2.8-5-5.8-11-8.1-16.4h-.2c.2 6.2.4 12.8.4 20.4v14H89zM147.4 1.1v46.6h-10.6V1.1h10.6zM167.4 35.8l-3.3 12h-11L167.4 1h13.8l14.5 46.6h-11.4l-3.6-12h-13.3zm11.8-8l-2.9-9.8-2.4-9c-.8 2.8-1.5 6.3-2.2 9l-2.8 9.9h10.3zM201.9 1.1h10.6v37.8H231v8.8h-29.1V1.1z" />
-                                </svg>
-                            </div>
-                            <div class="genial-smile">
-                                <div class="unliked">
-                                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="45" height="45" viewBox="0 0 64 64">
-                                        <path d="M32 64c17.673 0 32-14.327 32-32s-14.327-32-32-32-32 14.327-32 32 14.327 32 32 32zM32 6c14.359 0 26 11.641 26 26s-11.641 26-26 26-26-11.641-26-26 11.641-26 26-26zM16 20c0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.209-1.791 4-4 4s-4-1.791-4-4zM40 20c0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.209-1.791 4-4 4s-4-1.791-4-4zM44.006 39.204l5.145 3.087c-3.498 5.817-9.87 9.709-17.152 9.709s-13.654-3.892-17.152-9.709l5.145-3.087c2.448 4.072 6.909 6.796 12.006 6.796s9.558-2.724 12.006-6.796z"></path>
-                                    </svg>
-                                </div>
-                                <div class="liked">
-                                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="45" height="45" viewBox="0 0 64 64">
-                                        <path d="M32 64c17.673 0 32-14.327 32-32s-14.327-32-32-32-32 14.327-32 32 14.327 32 32 32zM32 6c14.359 0 26 11.641 26 26s-11.641 26-26 26-26-11.641-26-26 11.641-26 26-26zM32 37.422c7.247 0 14.139-1.925 20-5.307-0.911 11.152-9.57 19.885-20 19.885s-19.089-8.742-20-19.894c5.861 3.382 12.753 5.316 20 5.316zM16 22c0-3.314 1.791-6 4-6s4 2.686 4 6c0 3.314-1.791 6-4 6s-4-2.686-4-6zM40 22c0-3.314 1.791-6 4-6s4 2.686 4 6c0 3.314-1.791 6-4 6s-4-2.686-4-6z"></path>
-                                    </svg>
-                                </div>
-                            </div>
-                            <div class="genial-right">
-                                <span>101</span>
-                            </div>
+                <div class="item-info">
+                  <div class="item-description">
+                    <span>Lorem ipsum dolor sit amet, consectetur  dolore mut</span>
+                  </div>
+                  <div class="item-genial">
+                    <div class="genial font-genial" data-genial='{"press":"0","number_like":"101"}' style="margin:0 auto;">
+                      <div class="genial-left">
+                        <svg version="1" xmlns="http://www.w3.org/2000/svg" width="232" height="50" viewBox="0 0 232 50"><path d="M44 45.6a52.2 52.2 0 0 1-15.6 2.6c-8.5 0-14.7-2.1-19-6.3-4.2-4-6.6-10-6.5-17C2.9 9.6 14.2.7 29.5.7a32 32 0 0 1 13 2.3l-2.3 8.4c-2.5-1-5.7-2-10.8-2-8.8 0-15.5 5-15.5 15.1 0 9.6 6 15.3 14.7 15.3 2.4 0 4.3-.3 5.2-.7v-9.8h-7.2V21h17.3v24.6zM79.9 28H62.8v11h19.1v8.7H52.2V1.1h28.7v8.6H62.8v9.7h17.1V28zM89.1 47.7V1.1h12.3l9.7 17a135 135 0 0 1 7.6 16h.2c-.7-6.1-.9-12.4-.9-19.4V1.1h9.7v46.6h-11l-10-18c-2.8-5-5.8-11-8.1-16.4h-.2c.2 6.2.4 12.8.4 20.4v14H89zM147.4 1.1v46.6h-10.6V1.1h10.6zM167.4 35.8l-3.3 12h-11L167.4 1h13.8l14.5 46.6h-11.4l-3.6-12h-13.3zm11.8-8l-2.9-9.8-2.4-9c-.8 2.8-1.5 6.3-2.2 9l-2.8 9.9h10.3zM201.9 1.1h10.6v37.8H231v8.8h-29.1V1.1z"/></svg>
+                      </div>
+                      <div class="genial-smile">
+                        <div class="unliked">
+                          <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="45" height="45" viewBox="0 0 64 64"><path d="M32 64c17.673 0 32-14.327 32-32s-14.327-32-32-32-32 14.327-32 32 14.327 32 32 32zM32 6c14.359 0 26 11.641 26 26s-11.641 26-26 26-26-11.641-26-26 11.641-26 26-26zM16 20c0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.209-1.791 4-4 4s-4-1.791-4-4zM40 20c0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.209-1.791 4-4 4s-4-1.791-4-4zM44.006 39.204l5.145 3.087c-3.498 5.817-9.87 9.709-17.152 9.709s-13.654-3.892-17.152-9.709l5.145-3.087c2.448 4.072 6.909 6.796 12.006 6.796s9.558-2.724 12.006-6.796z"></path></svg>
                         </div>
+                        <div class="liked">
+                          <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="45" height="45" viewBox="0 0 64 64"><path d="M32 64c17.673 0 32-14.327 32-32s-14.327-32-32-32-32 14.327-32 32 14.327 32 32 32zM32 6c14.359 0 26 11.641 26 26s-11.641 26-26 26-26-11.641-26-26 11.641-26 26-26zM32 37.422c7.247 0 14.139-1.925 20-5.307-0.911 11.152-9.57 19.885-20 19.885s-19.089-8.742-20-19.894c5.861 3.382 12.753 5.316 20 5.316zM16 22c0-3.314 1.791-6 4-6s4 2.686 4 6c0 3.314-1.791 6-4 6s-4-2.686-4-6zM40 22c0-3.314 1.791-6 4-6s4 2.686 4 6c0 3.314-1.791 6-4 6s-4-2.686-4-6z"></path></svg>
+                        </div>
+                      </div>
+                      <div class="genial-right">
+                        <span>101</span>
+                      </div>
                     </div>
-                    <div class="container-xmidle bg-white padding" style="min-height: auto;">
-                        <span class="font-title color-lightOrange font-block">Dirección:</span>
-                        <span class="font-title font-block color-gray1">Av. Jaime Mendoza #324</span>
-                    </div>
+                  </div>
                 </div>
-                <div class="container-midle bg-gray1 padding">
-                    <div style="width: 10%;float: left;margin: 10px 5%;">
-                        <i class="font-title1 font-center color-gray ion ion-ios-telephone"></i>
-                    </div>
-                    <div class="contact-info">
-                        <span class="font-block font-title color-gray pull-left" style="width: 50%;">Teléfono</span>
-                        <span class="font-block font-title color-gray pull-left" style="width: 50%;">Celular</span>
-                        <span class="font-block font-title color-gray1 pull-left" style="width: 50%">6454321</span>
-                        <span class="font-block font-title color-gray1 pull-left" style="width: 50%;">76890654</span>
-                    </div>
+                <div class="item-date">
+                  <span class="item-date-day">24</span>
+                  <span class="item-date-month">ENE</span>
+                  <span class="item-date-year">2018</span>
                 </div>
-                <div class="container-midle bg-gray1">
-                    <div style="width: 10%;float: left;margin: 10px 5%;">
-                        <i class="font-title1 font-center color-gray ion ion-ios-world-outline"></i>
-                    </div>
-                    <div class="contact-info">
-                        <span class="font-block font-title color-gray" style="width: 100%;">Página Web</span>
-                        <a href="www.miempresa.com.bo" class="font-block font-title color-gray1" style="width: 100%;" target="_blank">www.miempresa.com.bo</a>
-                    </div>
-                </div>
-                <div class="container1 bg-white padding" style="margin-top: 0px;">
-                    <span class="font-title font-block color-lightOrange">Nosotros:</span>
-                    <p class="color-gray1 font-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, iusto nihil consequatur magnam iste qui dolorum ad, illum at recusandae nulla corrupti soluta impedit earum obcaecati eaque facere, nobis laborum?</p>
-                </div>
-                <div class="container-xmidle bg-gray1 padding borde">
-                    <span class="font-block font-title color-lightOrange " style="width: 100%;">Redes Sociales</span>
-                    <div class="font-center" style="width: 100%;padding: 10px 0px;">
-                        <span class="facebook ion ion-social-facebook  font-title2"></span>
-                        <span class="twitter ion ion-social-twitter font-title2"></span>
-                        <span class="google-plus ion ion-social-googleplus  font-title2"></span>
-                        <span class="youtube ion ion-ios-play  font-title2"></span>
-                    </div>
-                </div>
-                <div class="container-small size bg-gray1 padding">
-                    <div class="container4">
-                        <i class="ion ion-android-share-alt icon-share"></i>
-                        <span class="font-share">Compartir</span>
-                    </div>
-                </div>
-                <div class="container1 prueba3 padding">
-                    <span class="color-lightOrange font-title">Nuestra</span>
-                    <span class="color-fucsia font-title">Ubicación:</span>
-                </div>
-                <div class="container1 ubication"></div>
-                <div class="picture-container">
-                    <div class="btn-left bg-white pull-left">
-                        <span class="ion ion-arrow-left-c"></span>
-                    </div>
-                    <div class="picture">
-                    </div>
-                    <div class="btn-right bg-white pull-right">
-                        <span class="ion ion-arrow-right-c"></span>
-                    </div>
-                </div>
+              </div>
             </div>
+            <div class="filtro"></div>
+          </div>
         </div>
-        <div class="col-md-3 prueba24 ">
-            <div class="prueba34">
-                <div class="container-small2"></div>
-                <div class="container-small2" style="float: right;">
-                    <span class="color-whiteO font-block" style="font-size: 20px;margin-top: 18px;">Registrarse</span>
-                </div>
-            </div>
-            <div class="container1 bg-white" style="margin: 0; height: 80px;">
-                <div class="container-xmidle pull-right" style="height: 20px;">
-                    <span class="color-gray1 font-block font-title" style="margin-top: 25px;">
-                         Volver a Busqueda
-                    </span>
-                </div>
-                <div class="container-small" style="height: 30px;"></div>
-            </div>
-            <div class="container1 bg-gray font-center" style="height: 60px;padding: 15px; margin: 0;">
-                <span class="font-title font-block pull-left">Abierto en este momento </span>
-                <i class="ion ion-ios-clock pull-right" style="font-size: 30px; "></i>
-            </div>
-            <div class="container1" style="padding: 16px; margin: 0;">
-                <div class="container1 menu-options bg-gray" style="margin:5px;" >
-                    <span class="font-title">PERFIL</span>
-                    <div class="logo-options"></div>
-                </div>
-                <div class="container1 menu-options  bg-gray">
-                    <span class="font-title">COMENTARIOS</span>
-                    <div class="logo-options"></div>
-                </div>
-                <div class="container1" style="height: 50px;margin-top: 30px; border-bottom:1px solid #dfdfdf;">
-                    <span class="font-midle color-lightOrange">Más</span>
-                    <span class="font-midle color-turqueza">   de</span>
-                    <span class="font-midle color-fucsia">  nosotros...</span>
-                </div>
-                <div class="container1 menu-options  bg-gray">
-                    <span class="font-title">MIS EVENTOS</span>
-                    <div class="logo-options"></div>
-                </div>
-                <div class="container1 menu-options  bg-gray">
-                    <span class="font-title">MIS EMPLEOS</span>
-                    <div class="logo-options"></div>
-                </div>
-                <div class="container1 menu-options  bg-gray">
-                    <span class="font-title">MIS OFERTAS</span>
-                    <div class="logo-options"></div>
-                </div>
-                <div class="container1 font-center color-gray" style="height: 25px;">
-                    <span class="font-title">©Openred - gooMovil - 2018</span>
-                </div>
-            </div>
-            <!-- <div class="container1 bg-gray" style="margin-top: 12px;height: 120px;"></div> -->
-        </div>
+      </div>
     </div>
+  </div>
 </body>
 <script src="../../assets/js/genial.js"></script>
 
