--- a/templates/event/event.css
+++ b/templates/event/event.css
@@ -1,4 +1,7 @@
-body {
+/* Estilos item event */
+
+/*
+ body {
   background: #e9eaef;
 }
 
@@ -39,7 +42,6 @@ body {
   font-size: 17px;
   color: white;
   float: right;
-  /* margin-left: 300px; */
   margin-top: 80px;
   width: 64%;
 }
@@ -112,7 +114,6 @@ body {
   width: 65%;
   float: right;
   height: auto;
-  /* background: red; */
   padding: 4px 7px;
   text-align: justify;
 }
@@ -211,4 +212,214 @@ body {
     width: 960px;
     float: none;
   }
+} */
+
+/* Fin item event */
+
+/* Estilos Event */
+
+body {
+  background: #eaebec;
+  font-family: 'Raleway', sans-serif;
 }
+
+.color-blue {
+  color: #317fe1;
+}
+
+.font-block {
+  display: block;
+}
+
+.reset-margin {
+  margin: 0;
+}
+
+.reset-padding {
+  padding: 0;
+}
+
+.container-event {
+  height: auto;
+  padding: 10px;
+}
+
+.info-event-1 {
+  width: 100%;
+  height: auto;
+  background: white;
+  position: relative;
+  margin-top: 20px;
+  border-radius: 10px;
+  padding-bottom: 25px;
+}
+
+.info-event-portada {
+  background: #ccc;
+  height: 220px;
+  width: 100%;
+  border-radius: 10px 10px 0px 0px;
+  background-image: url(../../assets/images/event-picture.jpg);
+  background-size: cover;
+  background-position: center top;
+  background-repeat: no-repeat;
+}
+
+.info-event-gradient {
+  text-align: center;
+  width: 100%;
+  height: 220px;
+  position: absolute;
+  top: 0;
+  background-image: -webkit-linear-gradient(bottom, #302f2f99, transparent);
+  background-image: -moz-linear-gradient(bottom, #030303a8, transparent);
+  background-image: -ms-linear-gradient(bottom, #030303a8, transparent);
+}
+
+.info-event-name {
+  font-size: 20px;
+  color: white;
+  display: block;
+  margin-top: 188px;
+  font-weight: 100;
+  /* font-family: 'Raleway', sans-serif; */
+}
+
+.info-event-data {
+  height: 40px;
+  color: #c0c0c0;
+  text-align: center;
+  padding: 9px;
+  font-size: 12px;
+}
+
+.font-genial {
+  font-size: 55px;
+}
+
+.font-info {
+  display: block;
+  color: #79797f;
+  height: 33px;
+}
+
+.icon-info {
+  color: #121212;
+  display: inline-block;
+  margin-right: 10px;
+  font-size: 18px;
+}
+
+.info-event-datos {
+  height: auto;
+  padding: 15px 50px 0px 50px;
+}
+
+.info-event-map {
+  height: auto;
+  text-align: center;
+  padding: 10px;
+  margin-top: 3px;
+}
+
+.info-event-map button {
+  background: #0069dc;
+  border: 0;
+  padding: 4px;
+  margin: 0 auto;
+  border-radius: 8px;
+  font-size: 15px;
+  width: 150px;
+  color: #d4e0f8;
+  font-weight: 100;
+}
+
+.info-event-map button i {
+  font-size: 18px;
+  margin-right: 10px;
+  font-weight: 600;
+}
+
+.info-event-2 {
+  background: #fff;
+  height: auto;
+  margin-top: 20px;
+  border-radius: 10px;
+  padding: 35px;
+  text-align: justify;
+  font-size: 17px;
+}
+
+.info-event-2 .font-block {
+  margin-bottom: 10px;
+}
+
+.more-event {
+  /* background: blue; */
+  height: auto;
+  margin-top: 20px;
+  padding-bottom: 20px;
+}
+
+.more-event-1 {
+  height: auto;
+  padding: 5px;
+  text-align: center;
+  font-size: 17px;
+  color: #e74a8a;
+  padding-bottom: 20px;
+}
+
+.more-event-icon {
+  background: white;
+  width: 85px;
+  height: 85px;
+  border-radius: 50%;
+  margin: 0 auto;
+  color: #ea3f34;
+  text-align: center;
+  font-size: 45px;
+  padding: 13px;
+}
+
+.more-event-1 span {
+  display: block;
+  margin-top: 10px;
+}
+
+.more-event-map {
+  height: 180px;
+  background: #ccc;
+}
+
+.more-event-3 {
+  height: auto;
+  padding: 20px 25px 15px 25px;
+  font-size: 18px;
+}
+
+.more-event-4 {
+  background: white;
+  height: 100px;
+  border-radius: 10px;
+  padding: 18px;
+}
+
+.more-event-logo {
+  width: 65px;
+  background: red;
+  height: 65px;
+  border-radius: 50%;
+  float: left;
+}
+
+.more-event-business {
+  height: 65px;
+  float: left;
+  width: 75%;
+  padding: 18px 18px;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+/* Fin Estilos Event */
