--- a/templates/event/event.html
+++ b/templates/event/event.html
@@ -72,7 +72,7 @@
   <div class="row reset-margin">
     <div class="col-md-12 reset-padding">
       <div class="row reset-margin">
-        <div class="col-md-10 col-md-offset-1 reset-padding">
+        <div class="col-md-10 col-md-offset-1 reset-padding reset-margin1">
           <div class="container-event">
             <div class="info-event">
               <div class="info-event-1">
@@ -104,6 +104,11 @@
                       </div>
                     </div>
                   </div>
+                  <div class="info-event-fecha">
+                    <span class="day font-block">24</span>
+                    <span class="month font-block">ENE</span>
+                    <span class="year font-block">2018</span>
+                  </div>
                   <div class="info-event-datos">
                     <span class="ocultar font-info"><i class="icon-calendar icon-info"></i>13 de Noviembre</span>
                     <span class="font-info"><i class="icon-clock icon-info"></i>17:30</span>
@@ -112,6 +117,7 @@
                   </div>
                   <div class="info-event-map">
                     <button><i class="icon-corner-up-right"></i><span>Como Llegar</span></button>
+                    <span class="color-blue">Como LLegar</span>
                   </div>
                 </div>
               </div>
@@ -121,13 +127,24 @@
               </div>
             </div>
             <div class="more-event">
+              <div class="business-info1">
+                <div class="business-info1-title">
+                  <span>Organiza</span>
+                </div>
+                <div class="business-info-logo"></div>
+                <div class="business-name">
+                  <span class="font-block">Eventos Bolivia</span>
+                  <span>Sucre - Bolivia</span>
+                </div>
+              </div>
               <div class="more-event-1">
                 <div class="more-event-icon">
                   <span class="icon-map-pin"></span>
                 </div>
-                <span>Ubicación del evento</span>
+                <span class="font-ubication">Ubicación del evento</span>
               </div>
               <div class="more-event-map"></div>
+              <div class="business-info">
               <div class="more-event-3">
                 <span class="color-blue">Organiza</span>
               </div>
@@ -137,6 +154,7 @@
                   <span>Eventos Bolivia</span>
                 </div>
               </div>
+            </div>
             </div>
           </div>
         </div>
