--- a/templates/event/event.css
+++ b/templates/event/event.css
@@ -222,7 +222,9 @@ body {
   background: #eaebec;
   font-family: 'Raleway', sans-serif;
 }
-
+button:focus , button:hover{
+  outline: 0;
+}
 .color-blue {
   color: #317fe1;
 }
