--- a/templates/event/event.html
+++ b/templates/event/event.html
@@ -116,8 +116,8 @@
                     <span class="font-info"><i class="icon-phone icon-info"></i>64 - 56789 * 76890452</span>
                   </div>
                   <div class="info-event-map">
-                    <a id="howdrive"><i class="icon-corner-up-right"></i><span>Como Llegar</span></a>
-                    <label for="howdrive" class="color-blue">Como LLegar</label>
+                    <a href="#ohhsi!!" id="howdrive"><i class="icon-corner-up-right"></i><span>Como Llegar</span></a>
+                    <!-- <label for="howdrive" class="color-blue">Como LLegar</label> -->
                   </div>
                 </div>
               </div>
