Item Work finished

--- a/templates/work/work.html
+++ b/templates/work/work.html
@@ -1,19 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="../../assets/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="../../assets/css/fonts.css">
 	<link rel="stylesheet" type="text/css" href="../../assets/css/ionicons.min.css">
+	<link rel="stylesheet" href="../../assets/fonts/icomoon/style.css">
 
 	<!-- style for this template -->
 	<link rel="stylesheet" type="text/css" href="./work.css">
 	<!-- style for components -->
-	
+
 	<title>Work</title>
 </head>
+
 <body>
-	<h1>Work is Works</h1>
+
+	<!-- Item event -->
+	<div class="row reset-margin">
+		<div class="col-md-12 reset-padding">
+			<div class="row reset-margin">
+				<div class="col-md-10 col-md-offset-1 reset-padding reset-margin1">
+					<div class="container-work">
+						<div class="container-item-work">
+							<div class="item-work">
+								<div class="item-work-header">
+									<div class="item-work-logo"></div>
+									<div class="item-work-info">
+										<span>Pollos kikys</span>
+										<span class="redondito"></span>
+										<span class="item-ubicacion">Santa Cruz de la Sierra, Bolivia</span>
+									</div>
+									<div class="item-work-share">
+										<span class="icon-share-2"></span>
+									</div>
+								</div>
+								<div class="item-work-name truncado">
+									<span>Ejecutivo de Ventas de Negocio</span>
+								</div>
+								<div class="item-work-description">
+									<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</span>
+								</div>
+
+								<div class="item-work-category">
+									<span>Financiera</span>
+								</div>
+								<div class="item-work-data">
+									<span class="data">Publicado 10 de Febrero</span>
+									<span class="font-block">Postulaciones hasta el 20 de Febrero</span>
+								</div>
+
+
+							</div>
+						</div>
+						<div class="filtro"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Fin Item event -->
 </body>
+
 </html>
