--- a/assets/fonts/icomoon/style.css
+++ b/assets/fonts/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?f0b1i');
-  src:  url('fonts/icomoon.eot?f0b1i#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?f0b1i') format('truetype'),
-    url('fonts/icomoon.woff?f0b1i') format('woff'),
-    url('fonts/icomoon.svg?f0b1i#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?87fkhg');
+  src:  url('fonts/icomoon.eot?87fkhg#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?87fkhg') format('truetype'),
+    url('fonts/icomoon.woff?87fkhg') format('woff'),
+    url('fonts/icomoon.svg?87fkhg#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -44,4 +44,7 @@
 }
 .icon-phone:before {
   content: "\e904";
+}
+.icon-share-2:before {
+  content: "\e906";
 }
