Working work template 40%

--- a/templates/work/work.html
+++ b/templates/work/work.html
@@ -107,7 +107,20 @@
 								<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</span>
 							</div>
 						</div>
-						<div class="container-work-more"></div>
+						<div class="container-work-more">
+							<div class="work-ubication-1">
+								<span class="icono icon-map-pin"></span>
+								<span class="title">Ubicación</span>
+							</div>
+							<div class="container-map"></div>
+							<div class="work-business-1">
+								<span>Solicitud de:</span>
+							</div>
+							<div class="work-business">
+								<div class="work-business-logo"></div>
+								<span>Openred Sucre</span>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
