--- a/templates/work/work.css
+++ b/templates/work/work.css
@@ -219,10 +219,9 @@ body {
 }
 
 .container-work-info {
-  height:auto;
+  height: auto;
   width: 100%;
   padding: 10px;
-  margin-bottom: 10px;
 }
 
 .container-work-information {
@@ -288,13 +287,6 @@ body {
   text-overflow: ellipsis;
 }
 
-.container-work-more {
-  height: 200px;
-   width: 100%;
-   background: blue;
-   padding: 10px;
-}
-
 .work-description {
   width: 100%;
   height: auto;
@@ -311,6 +303,81 @@ body {
   margin: px 0px;
   margin-bottom: 10px;
   color: #327fe1;
+}
+
+.container-work-more {
+  height: 200px;
+  width: 100%;
+  padding: 10px;
+}
+
+.work-ubication-1 {
+  width: 100%;
+  height: 50px;
+  padding: 5px 25px;
+  margin-bottom: 18px;
+}
+
+.work-ubication-1 .title {
+  display: block;
+  float: left;
+  margin-left: 10px;
+  font-size: 18px;
+  margin-top: 8px;
+  color: #e84d9a;
+}
+
+.work-ubication-1 .icono {
+  display: block;
+  float: left;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  background: white;
+  color: #e74c99;
+  border-radius: 50%;
+  padding: 5px;
+  font-size: 30px;
+}
+
+.container-map {
+  width: 100%;
+  height: 180px;
+  background: #ccc;
+}
+
+.work-business {
+  height: 70px;
+  width: 100%;
+  background: white;
+  margin: 10px 0px 15px 0px;
+  border-radius: 7px;
+  padding: 5px 15px;
+}
+
+.work-business-1 {
+  height: 40px;
+  width: 100%;
+  margin-top: 10px;
+  padding: 10px 25px;
+  font-size: 18px;
+  color: #398ae2;
+}
+
+.work-business span {
+  display: block;
+  float: left;
+  margin-top: 20px;
+  font-size: 16px;
+  margin-left: 10px;
+}
+
+.work-business-logo {
+  width: 60px;
+  height: 60px;
+  background: red;
+  border-radius: 50%;
+  float: left;
 }
 
 @media (min-width:960px) {
