--- a/templates/work/work.html
+++ b/templates/work/work.html
@@ -71,8 +71,10 @@
 				<div class="col-md-10 col-md-offset-1 reset-padding reset-margin1">
 					<div class="container-work">
 						<div class="container-work-info">
+							<div class="work-name">
+								<span class="truncado">Ejecutivo de Ventas para Negocio</span>
+							</div>
 							<div class="container-work-information">
-								<span class="work-name truncado">Ejecutivo de Ventas para Negocio</span>
 								<span class="publication">Publicado el 10 de enero</span>
 								<span>Postulaciones 24 de Enero</span>
 								<div class="work-category">
@@ -108,17 +110,29 @@
 							</div>
 						</div>
 						<div class="container-work-more">
+							<div class="work-business-info-1">
+								<div class="business-info-title">
+									<span>Solicitud de:</span>
+								</div>
+								<div class="business-info-logo"></div>
+								<div class="business-name1">
+									<span class="font-block">Eventos Bolivia</span>
+									<span>Sucre - Bolivia</span>
+								</div>
+							</div>
 							<div class="work-ubication-1">
 								<span class="icono icon-map-pin"></span>
 								<span class="title">Ubicación</span>
 							</div>
 							<div class="container-map"></div>
-							<div class="work-business-1">
-								<span>Solicitud de:</span>
-							</div>
-							<div class="work-business">
-								<div class="work-business-logo"></div>
-								<span>Openred Sucre</span>
+							<div class="work-business-info">
+								<div class="work-business-1">
+									<span>Solicitud de:</span>
+								</div>
+								<div class="work-business">
+									<div class="work-business-logo"></div>
+									<span>Openred Sucre</span>
+								</div>
 							</div>
 						</div>
 					</div>
