Working offer item

--- a/templates/offer/offer.html
+++ b/templates/offer/offer.html
@@ -1,19 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="../../assets/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="../../assets/css/fonts.css">
 	<link rel="stylesheet" type="text/css" href="../../assets/css/ionicons.min.css">
+	<link rel="stylesheet" href="../../assets/fonts/icomoon/style.css">
+	<link rel="stylesheet" type="text/css" href="../../assets/css/genial.css">
 
 	<!-- style for this template -->
 	<link rel="stylesheet" type="text/css" href="./offer.css">
 	<!-- style for components -->
-	
+
 	<title>Offer</title>
 </head>
+
 <body>
-	<h1>Offer is Works</h1>
+
+	<div class="row reset-margin">
+		<div class="col-md-12 reset-padding">
+			<div class="row reset-margin">
+				<div class="col-md-10 col-md-offset-1 reset-padding reset-margin1">
+					<div class="container-offer">
+						<div class="container-item-offer">
+							<div class="item-offer">
+								<div class="item-offer-picture"></div>
+								<div class="item-offer-info">
+									<div class="item-offer-logo"></div>
+									<div class="item-offer-2">
+										<span class="item-offer-business truncado">Pollos KiKy</span>
+										<span class="item-offer-ubication truncado">Santa Cruz de la Sierra, Bolivia</span>
+									</div>
+									<div class="item-offer-name">
+										<span>Pollis pollis 2 x 1</span>
+									</div>
+									<div class="item-offer-description">
+										<span>Lorem ipsum dolor sit amet, consectetur .</span>
+									</div>
+									<div class="item-offer-1">
+										<div class="item-offer-3">
+											<span class="first-price">36Bs</span>
+											<span class="second-price">18Bs</span>
+											<span class="valido">valido hasta el 19 de Marzo</span>
+										</div>
+									</div>
+									<div class="item-offer-share">
+										<span class="icon-share-2"></span>
+									</div>
+								</div>
+
+							</div>
+						</div>
+						<div class="filtro"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
+
 </html>
